--- a/doc/fr_FR/partie_1.asciidoc
+++ b/doc/fr_FR/partie_1.asciidoc
@@ -35,3 +35,5 @@ Le but du plugin étant la création d'une structure pour le mode Design, nous a
 ===== Design
 Ce bouton va permettre de créer les pages du mode Design, la page principale au format du thème et les pages secondaires au format du cadre principale. A chaque fois que vous charger un thème le plugin vérifié que les pages sont créer, si toutes les pages existent le bouton sera grisé.
 
+image::../images/planok.png[]
+image::../images/plannotok.png[]
