--- a/doc/fr_FR/partie_1.asciidoc
+++ b/doc/fr_FR/partie_1.asciidoc
@@ -51,6 +51,8 @@ Vous pouvez constatez que le plugin crée une page supplémentaire, appelez +Gé
 ===== Bootstrap
 Arrivez à cette étape toutes les pages doivent être créées, ce bouton va permettre d'injecté le code dans la page principale pour pouvoir gérer toute votre Design, après toutes modifications il suffira de cliquez sur ce bouton pour mettre à jour la fenêtre principale. +
 
+image::../images/bootstrapok.png[]
+
 TIP: si la page de la fênetre principale n'existe pas le bouton restera grisé, cliquez sur le bouton *Design* pour combler ce problème.
 
 
