--- a/doc/fr_FR/partie_1.asciidoc
+++ b/doc/fr_FR/partie_1.asciidoc
@@ -55,4 +55,10 @@ image::../images/bootstrapok.png[]
 
 TIP: si la page de la fenêtre principale n'existe pas le bouton restera grisé, cliquez sur le bouton *Design* pour combler ce problème.
 
+==== Gestion des Pages Secondaires
+Le plugin devait s'arrêter à la création de la page principale, des pages secondaires et de l'injection du code Bootstrap sur la page principale, mais il est apparu important de pouvoir gérer les pages secondaires à partir du plugin pour pouvoir aussi en controler le fonctionnement. +
+
+image::../images/secondaires.png[]
+
+Ce chapitre à pour but de montrer comment configurer une page secondaire, Le bouton *Ajouter* est grisé puisque nous sommes en configuration _mono-cadre_, la configuration _multi-cadres_ est identiques sauf que vous pouvez créer autant de cadre que vous voulez. 
 
