--- a/doc/fr_FR/partie_1.asciidoc
+++ b/doc/fr_FR/partie_1.asciidoc
@@ -57,6 +57,7 @@ TIP: si la page de la fenêtre principale n'existe pas le bouton restera grisé,
 
 ==== Gestion des Pages Secondaires
 Le plugin devait s'arrêter à la création de la page principale, des pages secondaires et de l'injection du code Bootstrap sur la page principale, mais il est apparu important de pouvoir gérer les pages secondaires à partir du plugin pour pouvoir aussi en controler le fonctionnement. +
+Les images qui serviront aux pages secondaires seront rajouté avec le Gestionnaire d'images, pour notre thème elle seront au format de notre cadre principale et seront créer à l'aide du logiciel link:http://www.sweethome3d.com/fr/[SweetHome 3D] +
 
 image::../images/secondaires.png[]
 
@@ -72,5 +73,7 @@ Pour la suite du projet nous allons établir les différents modules dans chaque
 Si vous cliquez sur la fenêtre un popover pour la configuration du cadre apparaît:
 
 image::../images/popovercadre.png[]
+Changeons +Titre+ par +Salon+
+Pour le fonctionnement complet de ce popover voir <<popover-du-cadre,Popover du Cadre>>
 
 
