--- a/doc/fr_FR/partie_1.asciidoc
+++ b/doc/fr_FR/partie_1.asciidoc
@@ -90,5 +90,6 @@ image::../images/cuisinedemo.png[]
 image::../images/chambredemo.png[]
 
 A ce stade comme va vous le montrer la vidéo suivante votre Design est fonctionnel:
+link:https://www.youtube.com/watch?v=6T9feK6wF1A&feature=youtu.be[Démo vidéo]
 
 
