--- a/doc/fr_FR/partie_1.asciidoc
+++ b/doc/fr_FR/partie_1.asciidoc
@@ -107,4 +107,6 @@ image::../images/popoversvg.png[]
 Ce dernier popover va vous servir à déplacer la *ligne SVG* à l'endroit désiré, une ligne SVG est composé de quatre parties, un petit rectangle appelé +Début+, une ligne appelé +1er partie+, une ligne appelé +2eme partie+ et un dernier rectangle appelé +Fin+. +
 Le D-Pad va servir à déplacer la ligne, le bouton central à valider, image:../images/trash.png[] en haut à droite du popover permet d'effacer la ligne SVG. +
 Il suffit de sélectionner les parties de la ligne SVG que l'on veut déplacer et d'utiliser le D-Pad. +
-le dernier sélecteur sert à changer la couleur de la ligne SVG, elles correspondent aux différentes catégories de Jeedom
+le dernier sélecteur sert à changer la couleur de la ligne SVG, elles correspondent aux différentes catégories de Jeedom. +
+
+TIP: Appuyez sur touche +Shift+ en même temps multiplie le déplacement par 10. +
