--- a/doc/fr_FR/partie_1.asciidoc
+++ b/doc/fr_FR/partie_1.asciidoc
@@ -110,3 +110,7 @@ Il suffit de sélectionner les parties de la ligne SVG que l'on veut déplacer e
 le dernier sélecteur sert à changer la couleur de la ligne SVG, elles correspondent aux différentes catégories de Jeedom. +
 
 TIP: Appuyez sur touche +Shift+ en même temps multiplie le déplacement par 10. +
+
+Voici ce que la donne dans la +Cuisine+
+
+image::../images/cuisinesvg.png[]
