--- a/doc/fr_FR/partie_1.asciidoc
+++ b/doc/fr_FR/partie_1.asciidoc
@@ -131,6 +131,6 @@ Voila, votre thème et votre Design sont finalisés. Vous pouvez très bien le r
 Les dernières modifications ont permis de rendre la page principale en lecture seule, et de pouvoir implementer l'affichage automatique de la page 'Home'. +
 Le plugin offre d'autres possibilités, le chapitre suivant va vous permettre de toutes les explorer. +
 
-TIP: Il est possible de créer des profils `invité', il suffit au niveau du profil Jeedom de pointer vers la pièce désirée au lieu de la page principale, ce qui permettra à l'invité d'accéder à toutes les fonctions de la pièce sans avoir accès à la barre de menu et de ce faites au autres pages secondaires. +
+TIP: Il est possible de créer des profils 'invité', il suffit au niveau du profil Jeedom de pointer vers la pièce désirée au lieu de la page principale, ce qui permettra à l'invité d'accéder à toutes les fonctions de la pièce sans avoir accès à la barre de menu et de ce faites au autres pages secondaires. +
 
 
