--- a/doc/fr_FR/changelog.asciidoc
+++ b/doc/fr_FR/changelog.asciidoc
@@ -1,3 +1,7 @@
+.*V0.9.10.5*
+Remise à Zéro d'une page en mode Expert +
+Mise à jour de la Doc +
+
 .*V0.9.10.4*
 Corrections Mineures +
 Mise à jour de la Doc +
