--- a/doc/fr_FR/partie_1.asciidoc
+++ b/doc/fr_FR/partie_1.asciidoc
@@ -43,6 +43,7 @@ image::../images/plannotok.png[]
 
 IMPORTANT: Lors de la première utilisation, le plugin récupère les IDs des pages pour mettre à jour le thème, il faut absolument sauvegarder pour ne pas perdre les données. +
 
+[icon="http://powerman.name/doc/images/icons/tip.png"]
 TIP: Si le bouton est dégrisé c'est que des modifications ont été apportées au thème qui demande de mettre à jour les pages.
 
 Voici le résultat du thème que nous développons: +
